--- a/.github/workflows/master_cipp7knnf.yml
+++ b/.github/workflows/master_cipp7knnf.yml
@@ -13,12 +13,13 @@ env:
   AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: windows-latest
+    
     steps:
       - name: 'Checkout GitHub Action'
-        uses: actions/checkout@v2
-
+        uses: actions/checkout@v4
+      
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
         id: fa
@@ -26,4 +27,4 @@ jobs:
           app-name: 'cipp7knnf'
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_8F0BBBDC08924F84A58F7B978A6B12B7 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_2F4FBEDA3ADD45DE922952D3BE8B4006 }}
